qc_dashboard/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pe-ai-qc
  namespace: pe-ai-tremfya-derm
spec:
  type: ClusterIP
  selector:
    app: pe-ai-qc
  ports:
    - name: http
      port: 80
      targetPort: 8000
